--- a/problem.tex
+++ b/problem.tex
@@ -4,7 +4,7 @@
 \begin{frame}
 \begin{itemize}
   \item Pregel takes a directed graph as input where vertices and edges are associated with respective modifiable, user defined values
-  \item Pregel has topology mutation, which it uses to solve conflicts
+  \item Pregel has topology mutation to resolve conflicts
   \item Users need to have prior knowledge about ordering of mutation and conflicts that may occur
 \end{itemize}
 \end{frame}
