--- a/topics.tex
+++ b/topics.tex
@@ -2,7 +2,7 @@
 \subsection{Closely related works}
 \begin{frame}
 \begin{itemize}
-  \item Pregel : provides partial ordering, but forces the programmer to understand the reordering to close the gap between the logic of the programmer and what actually happens, or, it doesn?t provide proof that the reordering doesn?t cause problem.
+  \item Pregel : provides partial ordering, but forces the programmer to understand the reordering to close the gap between the logic of the programmer and what actually happens, or, it doesn?t provide proof that the reordering doesn't cause problem.
   \item GPS features an optional dynamic migration scheme. Dynamic migration repartitions the graph during computation by migrating vertices between workers, to improve workload balance and network usage. 
   \item GraphLab does not fully support graph mutations. It supports adding edges, but not removal of vertices or edges.
   \item Pregel-like Graph Processing Systems (Apache Graph, GPS, Mizan, and GraphLab) 
