--- a/presentation.tex
+++ b/presentation.tex
@@ -42,9 +42,9 @@ University\linebreak username@iastate.edu}
     \titlepage
   \end{frame}
 
-  \input{Problem}
+  \input{problem}
   \input{Importance}
-  \input{Solution}
+  \input{solution}
   \input{examples}
   \input{topics}
   \input{Evaluationtech}
