pushing the recent version

--- a/presentation.tex
+++ b/presentation.tex
@@ -22,9 +22,9 @@
 \graphicspath{{figures/}}
 
 \title[641 Project]{Project}
-\author[Team Bliss]{Bliss}
+\author[Team Bliss]{Team Bliss}
 \institute[ISU]{Department of Computer Science \linebreak Iowa State
-University\linebreak username@iastate.edu}
+University}
 
 \date[COMS 641]{COMS 641: Data Intensive Languages and Systems - Design and Semantics}
 %\date{Month X, 20XX}
@@ -41,12 +41,7 @@ University\linebreak username@iastate.edu}
   \begin{frame}[plain]
     \titlepage
   \end{frame}
-
   \input{problem}
-  \input{Importance}
   \input{solution}
-  \input{examples}
-  \input{topics}
-  \input{Evaluationtech}
-  \input{OProblems}
+  \input{related-works}
 \end{document}
