Added evaluation methods and other problems

--- a/presentation.tex
+++ b/presentation.tex
@@ -43,5 +43,7 @@ University}
   \end{frame}
   \input{problem}
   \input{solution}
+  \input{evaluation}
+  \input{other}
   \input{related-works}
 \end{document}
