--- a/other.tex
+++ b/other.tex
@@ -15,7 +15,7 @@ related GroupByKey operations are combined by analyzing the data flow.
 
 \subsection{Other Problems 2}
 \begin{frame}
-A evaluation mentioned in the FlumeJava paper is also that the abstraction of
+A problem mentioned in the FlumeJava paper is that the abstraction of
 operations make it easier for programmers to write MapReduce programs, but the
 abstraction also causes programers to write program that is logical to them but
 is efficient. The inefficiency is caused by the lack of understanding of the
@@ -23,8 +23,8 @@ underlying execution
 \begin{itemize}
   \item This can be optimized by having a better analysis to remove redundant
   operations
-  \item Very specific analysis for specific framework and hard to apply to other
-  works.
+  \item Very specific analysis for a specific framework and difficult to apply
+  to other works.
 \end{itemize}
 \end{frame}
 
