--- a/presentation.tex
+++ b/presentation.tex
@@ -44,9 +44,9 @@ University}
   
   \input{overview}
   \input{problem}
+  \input{examples}
   \input{solution}
   \input{evaluation}
   \input{other}
   \input{related-works}
-  \input{extra-related-works}
 \end{document}
