--- a/other.tex
+++ b/other.tex
@@ -18,8 +18,8 @@ related GroupByKey operations are combined by analyzing the data flow.
 A problem mentioned in the FlumeJava paper is that the abstraction of
 operations make it easier for programmers to write MapReduce programs, but the
 abstraction also causes programers to write program that is logical to them but
-is efficient. The inefficiency is caused by the lack of understanding of the
-underlying execution
+is inefficient. The inefficiency is caused by the lack of understanding of the
+underlying execution.
 \begin{itemize}
   \item This can be optimized by having a better analysis to remove redundant
   operations
