--- a/presentation.tex
+++ b/presentation.tex
@@ -21,7 +21,7 @@
 \DeclareGraphicsExtensions{.pdf,.jpg,.png}
 \graphicspath{{figures/}}
 
-\title[641 Project]{Concurrent Graph Mutation: A static approach to handle graph topology mutation conflicts}
+\title[641 Project]{Resolving Concurrent Graph Mutation Conflicts}
 \author[Team Bliss]{Bliss
 \linebreak Team Member(s):
 \linebreak Aashish Dhakal
@@ -45,8 +45,8 @@ University}
   \begin{frame}[plain]
     \titlepage
   \end{frame}
+  \input{overview}
   \input{problem}
-  \input{examples}
   \input{solution}
   \input{evaluation}
   \input{other}
