--- a/related-works.tex
+++ b/related-works.tex
@@ -15,6 +15,12 @@
 	\item Martin et. al. formalized the graph transformation based on set-theoretic model.
 	\item In the paper, it is mentioned that the graph transformation should specify the condition under which it will be applicable and the action needs to be taken at a position in a source graph to obtain target graph.
 	\item They do not map graphs into graphs, as in traditional graph rewriting, rather verify that the applicability condition of a transformation rule is true
+  	\end{itemize}
+  \let\thefootnote\relax\footnotetext{\tiny[Martin Strecker., "Modeling and Verifying Graph Transformations in Proof Assistants", ENTCS, Vol. 203 Issue 1, 2008]}
+\end{frame} 
+
+\begin{frame}
+	\begin{itemize}
 	 \item They have also claimed application of well-formed graph transformations to well-formed graphs yields again well-formed graphs.
 	 \item This kind of formalization has not been yet utilized to address the correctness of partial ordering.
   	\end{itemize}
@@ -30,14 +36,20 @@
 \item Joseph E. Gonzalez, Yucheng Low, Haijie Gu, Danny Bickson, Carlos Guestrin, "PowerGraph: Distributed Graph-Parallel Computation on Natural Graphs", OSDI, 2012.     
 \item Zuhair Khayyat, Karim Awara, Amani Alonazi, Hani Jamjoom, Dan Williams, and Panos Kalnis, "Mizan: A System for Dynamic Load Balancing in Large-scale Graph Processing" ACM EuroSys, 2013. 
 Zuhair Mizan 
-\item Semih Salihoglu and Jennifer Widom, "GPS: A Graph Processing System", Proc. International Conference on Scientific and Statistical Database Management (SSDBM), 2013.
     \end{itemize}
 \end{frame}
  
 \begin{frame}
 \begin{itemize}
+\item Semih Salihoglu and Jennifer Widom, "GPS: A Graph Processing System", Proc. International Conference on Scientific and Statistical Database Management (SSDBM), 2013.
  \item Yucheng Low, Joseph Gonzalez, Aapo Kyrola, Danny Bickson, Carlos Guestrin, and Joseph M. Hellerstein, "GraphLab: A New Parallel Framework for Machine Learning, In Uncertainty in Artificial Intelligence, 2010.
 \item U Kang, Charalampos E. Tsourakakis, and Christos Faloutsos, PEGASUS: A Peta-Scale Graph Mining System Implementation and Observations, IEEE International Conference on Data Mining (ICDM), 2009.
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\begin{itemize}
 \item Zechao Shang, and Jeffrey Xu Yu, "Catch the Wind: Graph workload balancing on cloud Data Engineering", IEEE 29th International Conference in Data Engineering, 2013.
     \end{itemize}
 \end{frame}
