--- a/presentation.tex
+++ b/presentation.tex
@@ -21,7 +21,7 @@
 \DeclareGraphicsExtensions{.pdf,.jpg,.png}
 \graphicspath{{figures/}}
 
-\title[641 Project]{Resolving Concurrent Graph Mutation Conflicts}
+\title[Resolving Concurrent Graph Mutation Conflicts]{Resolving Concurrent Graph Mutation Conflicts}
 \author[Team Bliss]{Bliss
 \linebreak Team Member(s):
 \linebreak Aashish Dhakal
