--- a/problem.tex
+++ b/problem.tex
@@ -82,6 +82,7 @@
   }
 \end{lstlisting}
 Essential operations of a \textit{Computation} in Giraph
+\let\thefootnote\relax\footnotetext{\tiny[giraph.apache.org/apidocs/]}
 \end{frame}
 
 \begin{frame}[fragile]
