--- a/solution.tex
+++ b/solution.tex
@@ -28,12 +28,23 @@
 		  \end{itemize}
 \end{frame}
 
-\begin{frame}
- \begin{figure}
-		\includegraphics[width=6cm, height=5 cm, angle=0]{figures/example.jpg}
-		\caption{K-Truss Algorithm }
-\end{figure}
-		\let\thefootnote\relax\footnotetext{\tiny[Louise et el., "Using Pregel-like Large Scale Graph Processing Frameworks for Social Network Analysis", ASONAM 2012]}
+\begin{frame}[fragile]
+\begin{lstlisting}[
+    language=Java]
+  Public class SimpleMutateGraphComputation extends BasicComputation<
+    LongWritable, DoubleWritable, FloatWritable, DoubleWritable> {
+
+    public void compute(Vertex<LongWritable, DoubleWritable, FloatWritable>
+      vertex, Iterable<DoubleWritable> messages){ 
+      if (getSuperstep() == 0) {
+      	addVertexRequest(getVertexCount(), new
+      	DoubleWritable(vertex.getValue()));
+      } else if (getSuperstep() == 1) {
+        vertex.voteToHalt();
+    } 
+  }
+\end{lstlisting}
+Example of a program that mutates a graph
 \end{frame}
 
 \begin{frame}	
